--- a/src/blocked.html
+++ b/src/blocked.html
@@ -1,5 +1,16 @@
 <html>
     <body>
         <h1>Blocked!</h1>
+
+        <div>
+            <a id="site" href=""></a>: <span id="count"></span>
+        </div>
+
+        <div>
+            total: <span id="total"></span>
+        </div>
+
+        <script src="lib.js"></script>
+        <script src="blocked.js"></script>
     </body>
 </html>
