--- a/src/blocked.html
+++ b/src/blocked.html
@@ -1,4 +1,8 @@
 <html>
+    <head>
+        <title>Blocked!</title>
+        <link href="style.css" rel="stylesheet"/>
+    </head>
     <body>
         <h1>Blocked!</h1>
 
